src/objects/Config__mdt.object
<CustomObject>
    <description>Application configuration</description>
    <fields>
        <fullName>DebugInfoRecipientEmails__c</fullName>
        <description>Email(s) to Receive DebugInfo Logs</description>
        <inlineHelpText>Email(s) to Receive DebugInfo Logs</inlineHelpText>
        <label>DebugInfo Recipient Email(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailDebugInfoLog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email DebugInfo Log to DebugInfo Recipient Email(s)</description>
        <inlineHelpText>Email DebugInfo Log to DebugInfo Recipient Email(s)</inlineHelpText>
        <label>Email DebugInfo Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableDiagnostics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True to Enable Diagnostics</description>
        <label>Enable Diagnostics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KillSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KillSwitch for Application</description>
        <inlineHelpText>Warning: All logic will be turned off if enabled!</inlineHelpText>
        <label>KillSwitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxDebugInfoAge__c</fullName>
        <description>Maximum DebugInfo Age (in days) Before Clearing (Leave blank for no limit)</description>
        <inlineHelpText>Maximum DebugInfo Age (in days) Before Clearing (Leave blank for no limit)</inlineHelpText>
        <label>Max DebugInfo Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxDebugInfoRecords__c</fullName>
        <description>Maximum DebugInfo Records Before Clearing (Leave blank for no limit)</description>
        <inlineHelpText>Maximum DebugInfo Records Before Clearing (Leave blank for no limit)</inlineHelpText>
        <label>Max DebugInfo Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Config</label>
    <pluralLabel>Config</pluralLabel>
</CustomObject>